WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285212
[JSC] `Intl.DurationFormat` should print negative sign for minutes after hidden hours
https://bugs.webkit.org/show_bug.cgi?id=285212
Summary
[JSC] `Intl.DurationFormat` should print negative sign for minutes after hidd...
Sosuke Suzuki
Reported
2024-12-27 23:25:22 PST
input: ``` const df = new Intl.DurationFormat('en-US', { style: "digital", hoursDisplay: "auto", }) print(df.format({ hours: 0, minutes: -2, seconds: -3 })); ``` expected output: `-02:03` actual output: `02:03`
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2024-12-27 23:43:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38404
EWS
Comment 2
2024-12-28 01:41:26 PST
Committed
288317@main
(fb9e1dc79a67): <
https://commits.webkit.org/288317@main
> Reviewed commits have been landed. Closing PR #38404 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-12-28 01:42:14 PST
<
rdar://problem/142119353
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug