[JSC] `Intl.DurationFormat` should print negative sign for minutes after hidden hours https://bugs.webkit.org/show_bug.cgi?id=285212

Reviewed by Yusuke Suzuki.

When the `hourDisplay` option is `auto` and `hours` is 0, the hours
value is not printed. So if the following minutes value is negative,
the negative sign should be put before the value.

However, in our current implementation, the negative sign isn't
printed.

```
const df = new Intl.DurationFormat('en-US', { style: "digital", hoursDisplay: "auto" });

print(df.format({ hours: 0, minutes: -2, seconds: -3 }));
// expected: "-02:03"
// actual  : "02:03"
```

* Source/JavaScriptCore/runtime/IntlDurationFormat.cpp:
(JSC::collectElements):

Canonical link: https://commits.webkit.org/288317@main